--- a/QuizMobileLib/QuizMobileLib.csproj
+++ b/QuizMobileLib/QuizMobileLib.csproj
@@ -116,6 +116,7 @@
     <Compile Include="Question.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuestionBank.cs" />
+    <Compile Include="XmlQuestionParser.cs" />
     <Content Include="Properties\QuizMobileLib.rd.xml" />
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
